5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1761_2103.log
== TEST (2019-05-25 21:16:05) 
-- CODE:
A = array(eval(int(input("digite numeros: "))))
B = array(eval(int(input("digite numeros: "))))

print(A)
print(B)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    A = array(eval(int(input())))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:16:52) 
-- CODE:
A = array(eval("digite numeros: "))
B = array(eval("digite numeros: "))

print(A)
print(B)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    A = array(eval("digite numeros: "))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:17:38) 
-- CODE:
A = array(eval(input("digite numeros: ")))
B = array(eval(input("digite numeros: ")))

print(A)
print(B)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    A = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:18:25) 
-- CODE:
from numpy import*

A = array(eval(input("digite numeros: ")))
B = array(eval(input("digite numeros: ")))

print(A)
print(B)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:19:47) 
-- CODE:
from numpy import*

A = array(eval(input("[digite numeros:] ")))
B = array(eval(input("[digite numeros:] ")))

print(A)
print(B)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:20:53) 
-- CODE:
from numpy import*

A = array(eval(input("digite numeros: ")))
B = array(eval(input("digite numeros: ")))

print(A)
print(B)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
